--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                         <a href="#contacts" class="nav-link medium">Contact us</a>
                 </div>
                 <div class="header-info">
-                    <pre class="name">Margarita 
-            Savonevskaya</pre>
+                    <div class="block-name">
+                        <p class="name">Margarita</p>
+                        <p class="name second-name">Savonevskaya</p>
+                    </div>
                 <img src="images/photo.jpg" alt = "My photo" class="my-photo">
                 <div class="block"></div>
                 </div>
