--- a/index.html
+++ b/index.html
@@ -12,23 +12,21 @@
         <div class="head-container">
             <header class="header">
                 <div class="navigation">
-                        <a class="medium nav-link" href="#enjoy">Favorite coffee</a>
-                        <a href="#about" class="nav-link medium">About</a>
-                        <a href="#mobile-app" class="nav-link medium">Mobile app</a>
-                        <a href="#contacts" class="nav-link medium">Contact us</a>
+                        <a class="nav-link" href="#enjoy">Favorite coffee</a>
+                        <a href="#about" class="nav-link">About</a>
+                        <a href="#mobile-app" class="nav-link">Mobile app</a>
+                        <a href="#contacts" class="nav-link">Contact us</a>
                 </div>
                 <div class="header-info">
                     <div class="block-name">
                         <p class="name">Margarita</p>
-                        <p class="name second-name">Savonevskaya</p>
+                        <p class="second-name">Savonevskaya</p>
                     </div>
-                <img src="images/photo.jpg" alt = "My photo" class="my-photo">
+                <img src="images/photo.jpg" alt ="My photo" class="my-photo">
                 <div class="block"></div>
                 </div>
             </header>
         </div>
-        
     </div>
-    
 </body>
 </html>
