fix: attributes with space

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <p class="name">Margarita</p>
                         <p class="second-name">Savonevskaya</p>
                     </div>
-                <img src="images/photo.jpg" alt="My photo" class="my-photo">
-                <div class="block"></div>
+                    <img src="images/photo.jpg" alt="Photo" class="my-photo">
+                    <div class="block"></div>
                 </div>
             </header>
         </div>
